--- a/app/templates/login1.html
+++ b/app/templates/login1.html
@@ -79,7 +79,7 @@
 
                                         <div class="form-group text-center m-t-30">
                                             <div class="col-sm-12">
-                                                <a href="#" class="text-muted"><i class="fa fa-lock m-r-5"></i> Forgot your password?</a>
+                                                <a href="{{url_for('recoverpw')}}" class="text-muted"><i class="fa fa-lock m-r-5"></i> Forgot your password?</a>
                                             </div>
                                         </div>
 
