--- a/app/templates/starter.html
+++ b/app/templates/starter.html
@@ -197,6 +197,7 @@
                                 </li>
                                 <li><a href="{{ url_for('user') }}"><i class="ti-user m-r-5"></i> Profile</a></li>
                                 <li><a href="javascript:void(0)"><i class="ti-settings m-r-5"></i> Settings</a></li>
+                                <!-- play with lock screen -->
                                 <li><a href="javascript:void(0)"><i class="ti-lock m-r-5"></i> Lock screen</a></li>
                                 <li><a href="{{ url_for('logout') }}"><i class="ti-power-off m-r-5"></i> Logout</a></li>
                             </ul>
